# redis-mate

./: .gitignore  LICENSE  README.md  README.zh.md  package.json  pnpm-lock.yaml
.github/workflows/: publish.yml
docker/: docker-compose.yml
docker-cluster/: docker-compose.yml  init_cluster.sh
docker-sentinel/: docker-compose.yml  sentinel.conf
scripts/: test-with-docker.sh
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: .env  Cargo.toml  redis_config_dev.db  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  command.rs  db.rs  lib.rs  logging.rs  main.rs  redis_service.rs
src/components/: ClusterInfoPanel.tsx  ConnectionManager.tsx  KeyManager.tsx  PubSubPanel.tsx
src/components/ui/: Button.tsx  Card.tsx  Input.tsx  Modal.tsx  Toast.tsx
src/locales/: en.json  zh.json
src/types/: tauri.ts
